--- a/app/src/main/res/layout/edit_layout.xml
+++ b/app/src/main/res/layout/edit_layout.xml
@@ -25,9 +25,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:hint="@string/note"
             android:background="@null"/>
+        <TextView
+            android:id="@+id/time_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:textSize="15sp"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/float_buttonIn"
         android:src="@drawable/ic_add"
