--- a/app/src/main/res/menu/switch_menu.xml
+++ b/app/src/main/res/menu/switch_menu.xml
@@ -3,8 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/search_item"
+        android:title="@string/Search"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/switch_item"
         android:title="switch"
         app:showAsAction="always"
         android:icon="@drawable/ic_span_1"/>
+
+    <item
+        android:id="@+id/about_item"
+        android:title="@string/About"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/setting_item"
+        android:title="@string/Setting"
+        app:showAsAction="never"/>
 </menu>
