--- a/app/src/main/res/layout/todolist_item.xml
+++ b/app/src/main/res/layout/todolist_item.xml
@@ -31,5 +31,13 @@
             android:textSize="15sp"
             android:hint="@string/note"
             android:background="@null"/>
+        <TextView
+            android:hint="No reminder"
+            android:id="@+id/show_reminder_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="12sp"
+            android:background="@null"/>
         </LinearLayout>
 </android.support.v7.widget.CardView>
