--- a/app/src/main/res/layout/todolist_item.xml
+++ b/app/src/main/res/layout/todolist_item.xml
@@ -32,7 +32,7 @@
             android:hint="@string/note"
             android:background="@null"/>
         <TextView
-            android:hint="No reminder"
+            android:hint="@string/no_reminder"
             android:id="@+id/show_reminder_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
